# triangulos-opengl

./: CMakeLists.txt  README.md  main.cpp
